--- a/config.json
+++ b/config.json
@@ -1,18 +1,18 @@
 {
-  "name": "Aluracord - Matrix (peas)",
+  "name": "Visualize seu GitHub - Matrix",
   "theme": {
     "colors": {
       "primary": {
-        "050": "#E3F9E5",
-        "100": "#C1EAC5",
-        "200": "#A3D9A5",
-        "300": "#7BC47F",
+        "050": "#DDD78D",
+        "100": "#DCBF85",
+        "200": "#8B635C",
+        "300": "#60594D",
         "400": "#57AE5B",
-        "500": "#3F9142",
-        "600": "#2F8132",
+        "500": "#590925",
+        "600": "#93A29B",
         "700": "#207227",
-        "800": "#0E5814",
-        "900": "#05400A"
+        "800": "#007FFF",
+        "900": "#1AFFD5"
       },
       "neutrals": {
         "000": "#FFFFFF",
