--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Visualize seu GitHub - Matrix",
+  "name": "Digite seu GitHub - Galaxy",
   "theme": {
     "colors": {
       "primary": {
