--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@skynexui/components": "^1.23.7",
     "next": "^12.0.8",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "styled-jsx": "^5.0.0"
   }
